// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhotoSelector test suite even number of photos 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    dataSet={{}}
    style={
      {
        "width": "100%",
      }
    }
  >
    <View
      dataSet={{}}
      feedbackId="field-1-feedback"
      hasFeedbackText={false}
      hasHelpText={false}
      helpTextId="field-1-helptext"
      isDisabled={false}
      isInvalid={false}
      isReadOnly={false}
      isRequired={false}
      labelId="field-1-label"
      nativeID="field-1-label"
      setHasFeedbackText={[Function]}
      setHasHelpText={[Function]}
      style={
        {
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "marginBottom": 4,
          "marginTop": 4,
        }
      }
    >
      <Text
        dataSet={{}}
        style={
          {
            "backgroundColor": undefined,
            "color": "#737373",
            "fontFamily": undefined,
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "500",
            "letterSpacing": 0,
            "lineHeight": 21,
            "textDecorationLine": undefined,
          }
        }
      >
        Select Photos (limit 4)
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      dataSet={{}}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={{}}
      testID="photo-selector"
    >
      <View
        dataSet={{}}
        style={
          {
            "marginLeft": -8,
            "marginRight": -8,
          }
        }
      >
        <View
          dataSet={{}}
          style={
            {
              "flexDirection": "row",
            }
          }
        >
          <View
            dataSet={{}}
            style={
              {
                "alignItems": "center",
                "height": 372,
                "justifyContent": "center",
                "width": 248,
              }
            }
          >
            <ActivityIndicator
              accessibilityLabel="loading"
              accessible={true}
              color="#0891b2"
              size="large"
              style={
                [
                  [
                    {},
                    {
                      "dataSet": {},
                    },
                    {},
                  ],
                  undefined,
                ]
              }
            />
            <Text
              dataSet={{}}
              style={
                {
                  "backgroundColor": undefined,
                  "color": "#171717",
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 21,
                  "textDecorationLine": undefined,
                }
              }
            >
              Loading
            </Text>
          </View>
          <View
            dataSet={{}}
            style={{}}
          />
          <View
            dataSet={{}}
            style={
              {
                "paddingRight": 6,
              }
            }
          />
          <View
            dataSet={{}}
            style={{}}
          />
          <View
            dataSet={{}}
            style={
              {
                "alignItems": "center",
                "height": 372,
                "justifyContent": "center",
                "width": 496,
              }
            }
          >
            <ActivityIndicator
              accessibilityLabel="loading"
              accessible={true}
              color="#0891b2"
              size="large"
              style={
                [
                  [
                    {},
                    {
                      "dataSet": {},
                    },
                    {},
                  ],
                  undefined,
                ]
              }
            />
            <Text
              dataSet={{}}
              style={
                {
                  "backgroundColor": undefined,
                  "color": "#171717",
                  "fontFamily": undefined,
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 21,
                  "textDecorationLine": undefined,
                }
              }
            >
              Loading
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`PhotoSelector test suite odd number of photos 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    dataSet={{}}
    style={
      {
        "width": "100%",
      }
    }
  >
    <View
      dataSet={{}}
      feedbackId="field-2-feedback"
      hasFeedbackText={false}
      hasHelpText={false}
      helpTextId="field-2-helptext"
      isDisabled={false}
      isInvalid={false}
      isReadOnly={false}
      isRequired={false}
      labelId="field-2-label"
      nativeID="field-2-label"
      setHasFeedbackText={[Function]}
      setHasHelpText={[Function]}
      style={
        {
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "marginBottom": 4,
          "marginTop": 4,
        }
      }
    >
      <Text
        dataSet={{}}
        style={
          {
            "backgroundColor": undefined,
            "color": "#737373",
            "fontFamily": undefined,
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "500",
            "letterSpacing": 0,
            "lineHeight": 21,
            "textDecorationLine": undefined,
          }
        }
      >
        Select Photos (limit 4)
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      dataSet={{}}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={{}}
      testID="photo-selector"
    >
      <View
        dataSet={{}}
        style={
          {
            "marginLeft": -8,
            "marginRight": -8,
          }
        }
      >
        <View
          dataSet={{}}
          style={
            {
              "alignItems": "center",
              "height": 500,
              "justifyContent": "center",
              "width": 750,
            }
          }
        >
          <ActivityIndicator
            accessibilityLabel="loading"
            accessible={true}
            color="#0891b2"
            size="large"
            style={
              [
                [
                  {},
                  {
                    "dataSet": {},
                  },
                  {},
                ],
                undefined,
              ]
            }
          />
          <Text
            dataSet={{}}
            style={
              {
                "backgroundColor": undefined,
                "color": "#171717",
                "fontFamily": undefined,
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 21,
                "textDecorationLine": undefined,
              }
            }
          >
            Loading
          </Text>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;
